MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/Unit_Option__c.object-meta.xml
<CustomObject>
    <description>Object to define Unit Options under specific Units or Phases.</description>
    <label>Unit Option</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Option</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>