MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/AdditionalPrice__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPrice__c</fullName>
    <label>Additional Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>