MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/BasementArea__c.field-meta.xml
<CustomField>
    <fullName>BasementArea__c</fullName>
    <label>Basement Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>