MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Exterior__c.field-meta.xml
<CustomField>
    <fullName>Exterior__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>