MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/FacadeType__c.field-meta.xml
<CustomField>
    <fullName>FacadeType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facade Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>