MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/FirstFloorArea__c.field-meta.xml
<CustomField>
    <fullName>FirstFloorArea__c</fullName>
    <label>First Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>