MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/GrossFloorAreaGFA__c.field-meta.xml
<CustomField>
    <fullName>GrossFloorAreaGFA__c</fullName>
    <label>Gross Floor Area (GFA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>