MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/GroundFloorArea__c.field-meta.xml
<CustomField>
    <fullName>GroundFloorArea__c</fullName>
    <label>Ground Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>