MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/GroundFloorParkingArea__c.field-meta.xml
<CustomField>
    <fullName>GroundFloorParkingArea__c</fullName>
    <label>Ground Floor Parking Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>