MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Interior__c.field-meta.xml
<CustomField>
    <fullName>Interior__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>