MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/MaxHeightElevation__c.field-meta.xml
<CustomField>
    <fullName>MaxHeightElevation__c</fullName>
    <label>Max Height/Elevation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>