MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/NumberofBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberofBedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>