MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/NumberofCarParks__c.field-meta.xml
<CustomField>
    <fullName>NumberofCarParks__c</fullName>
    <label>Number of Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>