MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Phase object</description>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Unit Option</relationshipLabel>
    <relationshipName>Unit_Option</relationshipName>
    <type>Lookup</type>
</CustomField>