MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/PlotAreasqm__c.field-meta.xml
<CustomField>
    <fullName>PlotAreasqm__c</fullName>
    <label>Plot Area</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>