MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/SecondFloorArea__c.field-meta.xml
<CustomField>
    <fullName>SecondFloorArea__c</fullName>
    <label>Second Floor Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>