MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Sharepoint_Layout_Link__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Layout_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sharepoint Layout Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>