MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/TotalGrossSellableAreaGSA__c.field-meta.xml
<CustomField>
    <fullName>TotalGrossSellableAreaGSA__c</fullName>
    <label>Total Gross Sellable Area (GSA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>