MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Typology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>