MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Unit object</description>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Option</relationshipLabel>
    <relationshipName>Unit_Option</relationshipName>
    <type>Lookup</type>
</CustomField>