MODON MRE BPDEV/force-app/main/default/objects/Unit_Option__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unit__c</columns>
    <columns>NAME</columns>
    <columns>PlotAreasqm__c</columns>
    <columns>AED_SQM__c</columns>
    <columns>BasePrice__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>TotalGrossSellableAreaGSA__c</columns>
    <columns>AreaUnitofMeasure__c</columns>
    <columns>AdditionalPrice__c</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>